Add support for RSpec
Introduce the RSpec-focused `spec/` directory to mirror the
MiniTest-focused `test/` directory, and configure our Continuous
Integration system to execute that suite as well.

Since RSpec `type: :feature` tests default to execute without
JavaScript, first check for a JavaScript-capable browser before
executing an audit.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,3 +33,5 @@ jobs:
 
       - run: bin/rails standard
       - run: bin/rails test:all
+      - run: bundle exec rspec
+      - run: RSPEC_TYPE=feature bundle exec rspec
