--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,14 +9,17 @@ jobs:
       fail-fast: false
       matrix:
         ruby-version:
-          - "2.7"
           - "3.0"
           - "3.1"
           - "3.2"
         rails-version:
+          - "7.1"
           - "7.0"
           - "6.1"
           - "main"
+        exclude:
+          - ruby-version: "3.0"
+            rails-version: "main"
 
     env:
       RAILS_VERSION: ${{ matrix.rails-version }}
@@ -32,6 +35,7 @@ jobs:
           bundler-cache: true
 
       - run: bin/rails standard
+        if: matrix.ruby-version != 3.2
       - run: bin/rails test:all
       - run: bundle exec rspec
       - run: RSPEC_TYPE=feature bundle exec rspec
