--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,12 +13,24 @@ jobs:
           - "3.1"
           - "3.2"
         rails-version:
+          - "8.0"
+          - "7.2"
           - "7.1"
           - "7.0"
           - "6.1"
           - "main"
         exclude:
           - ruby-version: "3.0"
+            rails-version: "7.2"
+          - ruby-version: "3.0"
+            rails-version: "8.0"
+          - ruby-version: "3.0"
+            rails-version: "main"
+          - ruby-version: "3.1"
+            rails-version: "7.2"
+          - ruby-version: "3.1"
+            rails-version: "8.0"
+          - ruby-version: "3.1"
             rails-version: "main"
 
     env:
